# katas

./: .gitignore  COPYING  README.md  deps.edn  index.md  manifest.json  manifest.scm  pyproject.toml  shadow-cljs.edn
chrome-ext-one-tab/: manifest.scm
chrome-ext-one-tab/do/: cljs  repl
chrome-ext-one-tab/src/: service-worker.js
chrome-ext-one-tab/src/main/: manifest.edn
chrome-ext-one-tab/src/main/one_tab/ext/: service_worker.cljs
chrome-ext-one-tab/to/do/: 6099965631769975111.md
do/: build
dumb-python-schemas/: pyproject.toml
dumb-python-schemas/src/: users.py
fun-fact/: .gitignore  README.md  fact.scm  manifest.scm
funny-money/: README.md
funny-money/src/: funny_money.py
install-guix/: README.md  kata.sh  manifest.scm
railways-transport-tycoon/: .gitignore  README.md  kata.sh  manifest.scm
railways-transport-tycoon/src/: kata.sql
railways-transport-tycoon/time/: encourage.sh
unique-sort/: .envrc.sample  README.md  uniq.scm
unique-sort/share/guile/spec/: runner.scm
unique-sort/time/: manifest.scm
